# totp-clip

./: .gitignore  README.md  pyproject.toml  totp.py
.github/workflows/: pypi.yml
src/: __init__.py
src/totp_clip/: totp.py
